--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "core-js": "^2.5.4",
     "ng-sidebar": "^7.2.0",
     "ng2-carouselamos": "^3.2.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "rxjs-pubsub": "^0.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
